# company-ai

./: .gitignore  .pre-commit-config.yaml  Company-AI.lnk  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  knowledge_base.py  main.py  pyproject.toml  requirements.in  requirements.txt  run.bat  utils.py
config/: communication_definitions.py  hierarchy.py  logic_mapping.py  prompts.py
core/: agent.py  company.py  llm_api.py  memory.py  orchestrator.py  task.py  vfs.py
core_logic/: agent.py  audit_log.py  file_system_manager.py  orchestrator.py  task_manager.py
core_logic/protocols/: communication_protocol.py  delegation_protocol.py  escalation_protocol.py
engine/: agent.py  company.py  memory.py  orchestrator.py  router.py  task.py
engine/adapters/: base_adapter.py  gemini_adapter.py
templates/: index.html
tools/: base_tool.py  communication_tools.py
workspace/alpha_corp/: DynamicTaskGraph_API.md  DynamicTaskGraph_DatabaseSchema.md  DynamicTaskGraph_TechnicalSpecification.md  confirmation.txt  database_performance_request.txt  database_spec.txt  final_spec.txt  greeting_log.txt  manifest.json  technical_specification.md
workspace/alpha_corp/agent_id_cto_001/: .agent_meta.json
workspace/alpha_corp/agent_id_dba_001/: .agent_meta.json
workspace/alpha_corp/agent_id_programmer_001/: .agent_meta.json
workspace/alpha_corp/docs/: api_spec.md  db_schema.md  final_spec.md  tech_spec_task_graph.md  tech_spec_task_graph_section2.md  tech_spec_task_graph_section3.md  tech_spec_task_graph_section4.md
(+3 files in other folders)
